--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "last-fm": "^5.3.0",
     "vue": "^2.6.11",
     "vuetify": "^2.4.0"
   },
